recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:2: error: not found: value spiral
	spiral(5, 90, 0, 3);
        ^Spiral:5: error: not found: value spiral
  spiral(4,90,3,3);
  ^Spiral:8: error: not found: value spiral
    spiral(3,90,6,3);
    ^Spiral:11: error: not found: value spiral
      spiral(2,90,9,3);
      ^Spiral:14: error: not found: value spiral
        spiral(1,90,12,3);
        ^Spiral:17: error: not found: value spiral
          spiral(0,90,12,3);
          ^Spiral:23: error: not found: value spiral
		spiral(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Int],
                ^